# mcintosh-rs232

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: example-1.py  example-2.py  power_on.py
setup/: README.txt  deploy_app.sh  notes.txt  requirements.txt
src/mcintosh_rs232/: __init__.py  __main__.py  const.py  protocol.py  receiver.py  state.py
tests/: conftest.py  test_mcintosh_rs232.py
