[project]
name = "mcintosh-rs232"
version = "0.1.11"
description = "Async library to control McIntosh audio equipment over RS232"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "serialx[esphome]>=1.2.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
    "Framework :: AsyncIO",
]

[project.scripts]
mcintosh-rs232 = "mcintosh_rs232.__main__:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 1

[tool.ruff]
src = ["src"]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
strict = true
